Translation update done using Pootle.

--- a/po/tt.po
+++ b/po/tt.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-03-30 23:14+0200\n"
-"Last-Translator: Michal <michal@cihar.com>\n"
+"PO-Revision-Date: 2010-07-22 02:24+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: tatarish <tt@li.org>\n"
 "Language: tt\n"
 "MIME-Version: 1.0\n"
@@ -2777,10 +2777,9 @@ msgid "Table structure for table"
 msgstr "Tüşämä tözeleşe"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "__TABLE__ atlı tüşämä eçtälege"
+msgstr "@TABLE@ atlı tüşämä eçtälege"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8222,284 +8221,3 @@ msgstr "Tüşämä adın üzgärtü"
 #~ msgstr ""
 #~ "Can not use iconv nor libiconv nor recode_string function while extension "
 #~ "reports to be loaded. Check your php configuration."
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Yaña alan östäw"
-
-#~ msgid "Field"
-#~ msgstr "Alan"
-
-#~ msgid "Records"
-#~ msgstr "Yazma"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Alan arasında bilge"
-
-#~ msgid "Fields"
-#~ msgstr "Alan"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "%s isemle alan beterelde"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "See image/jpeg: inline"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"ziple\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"gziple\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"bziple\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Başlıqqa östämä açıqlama östäw (yullar \\n belän ayırıla)"
-
-#, fuzzy
-#~ msgid "and"
-#~ msgstr "Wä"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Sünek"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Açıq"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Tüşämä tözätü"
-
-#~ msgid "Calendar"
-#~ msgstr "Täqwim"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 öçen yaraqlı"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Töp köyläneşen yökläp bulmadı: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "%s alannan tezeş yaratu"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Yaña Bit yaratu"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Buş"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Tüşäwne awdar (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Serverdäge \"%s\" digän tezeleş yaraqsız"
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Açıqlama"
-
-#, fuzzy
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Buş"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "\"%s\" biremlek tözeleşe - %s. bit"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "\"%s\" atlı tüşämä yuq äle!"
-
-#~ msgid "running on %s"
-#~ msgstr "Sanaq: %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "Bu sxemnı ber bittä urnaştıru öçen, olılıq sanı bik keçe"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Buş"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Buş"
-
-#, fuzzy
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "\"%s\" biremlege öçen xoquqlar tikşerü."
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "\"%s\" atlı tüşämä yuq äle!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Töp köyläneşen yökläp bulmadı: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "%1$s atlı tüşämä adın %2$s itep üzgärtep bulmadı"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr "\"%s\" yöklämäsen cibärep bulmadı,<br />PHP Caylawın tikşerçe"
-
-#, fuzzy
-#~ msgid "(or the local MySQL server"
-#~ msgstr "MySQL servergä totaşılıp bulmadı"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "below, if there is any, may also help you in diagnosing the problem. If "
-#~ "you still have problems or if the parser fails where the command line "
-#~ "interface succeeds, please reduce your SQL query input to the single "
-#~ "query that causes problems, and submit a bug report with the data chunk "
-#~ "in the CUT section below:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV bireme"
-
-#~ msgid "Copy"
-#~ msgstr "Kübäyt"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Betergäç, xoquqlarnı yañadan yöklise."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-
-#~ msgid "has been altered."
-#~ msgstr "üzgärtelde."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Xoquqlar tüşämäsennän genä beteräse."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr "Eçke prosedur cibärü xoquqı; MySQL'nıñ bu söremendä yuq äle ul."
-
-#~ msgid "Process list"
-#~ msgstr "Proses isemlege"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Xoquqlarnı qabat yökläw"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "MS Excel tözeleşendä"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Saylap Beter"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Saylap Beter"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Östäw"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Sorawnı Yañart"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Sal"
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Ğın0"
-
-#~ msgid "Jan1"
-#~ msgstr "Ğın1"
-
-#~ msgid "Jan2"
-#~ msgstr "Ğın2"
