--- a/po/tt.po
+++ b/po/tt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-07-22 02:24+0200\n"
+"PO-Revision-Date: 2010-07-22 02:25+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: tatarish <tt@li.org>\n"
 "Language: tt\n"
@@ -2786,10 +2786,9 @@ msgid "(continued)"
 msgstr "(dawamlı)"
 
 #: libraries/export/latex.php:15
-#, fuzzy
 #| msgid "Structure of table __TABLE__"
 msgid "Structure of table @TABLE@"
-msgstr "__TABLE__ atlı tüşämä tözeleşe"
+msgstr "@TABLE@ atlı tüşämä tözeleşe"
 
 #: libraries/export/latex.php:26
 msgid "LaTeX"
