Translation update done using Pootle.

--- a/po/sk.po
+++ b/po/sk.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-03-30 23:47+0200\n"
-"Last-Translator: Michal <michal@cihar.com>\n"
+"PO-Revision-Date: 2010-07-22 02:25+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: slovak <sk@li.org>\n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
@@ -2813,10 +2813,9 @@ msgid "Table structure for table"
 msgstr "Štruktúra tabuľky pre tabuľku"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Obsah tabuľky __TABLE__"
+msgstr "Obsah tabuľky @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8386,353 +8385,3 @@ msgstr "Premenovať tabuľku na"
 #~ msgstr ""
 #~ "Nie je možné použiť funkcie iconv, libiconv a recode_string aj napriek "
 #~ "tomu, že rozšírenia sú nahrané. Skontrolujte prosím nastavenie PHP."
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Pridať nové pole"
-
-#~ msgid "Field"
-#~ msgstr "Pole"
-
-#~ msgid "Records"
-#~ msgstr "Záznamov"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Polia ukončené"
-
-#~ msgid "Fields"
-#~ msgstr "Polia"
-
-#~ msgid "Add %s field(s)"
-#~ msgstr "Pridať %s položiek"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Pole %s bolo odstránené"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Zobrazí image/jpeg: inline"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"zozipované\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"gzip-ované\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"bzipped\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Pridať vlastný komentár do hlavičky (\\n oddeľuje riadky)"
-
-#~ msgid "and"
-#~ msgstr "a"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Vypnuté"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Zapnuté"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Opraviť"
-
-#~ msgid "Calendar"
-#~ msgstr "Kalendár"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "Kompatibilné s&nbsp;MySQL&nbsp;4.0"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr ""
-#~ "Nepodarilo sa načítať prednastavenú konfiguráciu zo súboru: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Vytvoriť index na&nbsp;%s&nbsp;stĺpcoch"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Vytvoriť tabuľku"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Žiadny"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Vyprázdniť tabuľku (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Chybný index serveru: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Popis"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Žiadna"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Schéma databázy \"%s\"  - Strana %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Tabuľka \"%s\" neexistuje!"
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "Tento MySQL server funguje ako %s v <b>replikačnom</b> procese. Pre viac "
-#~ "informácií o stave replikácie na tomto serveri navštívte prosím <a href="
-#~ "\"#replication\">sekciu replikácie</a>."
-
-#~ msgid "running on %s"
-#~ msgstr "beží na %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "Mierka je príliš mala na roztiahnutie schémy na stránku"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Nemôžem spustiť session bez chyby. Prosím skontrolujte chyby vo Vašom PHP "
-#~ "a/alebo v logoch web serveru a nastavte Vaše PHP korektne."
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Avšak pri poslednom pokuse neboli prijaté žiadne dáta, čo obvykle "
-#~ "znamená, že phpMyAdmin nebude schopný dokončiť tento import, pokiaľ "
-#~ "nebude zvýšený časový limit behu skriptu v php."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Žiadny"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Žiadny"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Prideliť všetky oprávnenia pomocou masky (používateľ_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Tabuľka \"%s\" neexistuje!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr ""
-#~ "Nepodarilo sa načítať prednastavenú konfiguráciu zo súboru: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "Chybný názov hostu pre server %1$s. Prosím, skontrolujte konfiguráciu."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Chyba pri premenovaní tabuľky %1$s na %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr "nedá sa nahrať rozšírenie %s, prosím skontrolujte konfiguráciu PHP"
-
-#, fuzzy
-#~ msgid ""
-#~ "This server is not configured as master in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Tento server nie je nakonfigurovaný ako slave v replikačnom procese. "
-#~ "Chceli by ste ho <a href=\"%s\">nakonfigurovať</a>?"
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as slave in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as slave in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Tento server nie je nakonfigurovaný ako slave v replikačnom procese. "
-#~ "Chceli by ste ho <a href=\"%s\">nakonfigurovať</a>?"
-
-#, fuzzy
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Nepodarilo sa pripojiť k zdroju"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Je možné, že ste našli chybu v SQL syntaktickom analyzátore. Preskúmajte "
-#~ "podrobne SQL dopyt, predovšetkým správnosť umiestnenia úvodzoviek. Ďalšia "
-#~ "možnosť je, že nahrávate súbor s binárnymi dátami nezapísanými v "
-#~ "úvodzovkách. Môžete tiež vyskúšať použiť príkazový riadok MySQL na "
-#~ "odstránenie problému. Pokial stále máte problémy alebo syntaktický "
-#~ "analyzátor SQL stále hlási chybu v dopyte, ktorý v príkazovom riadku "
-#~ "funguje, prosím pokúste sa zredukovať dopyt na čo najmenší, v ktorom sa "
-#~ "problém ešte vyskytuje a ohláste chybu na stránke phpMyAdmina spolu so "
-#~ "sekciou VÝPIS uvedenú nižšie:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV dáta"
-
-#~ msgid "Copy"
-#~ msgstr "Kopírovať"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Odstrániť používateľov a znovunačítať práva."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Toto je najčistejšie riešenie, ale znovunačítanie práv môže chvíľu trvať."
-
-#~ msgid "has been altered."
-#~ msgstr "bola zmenená."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer nepodporuje túto funkciu."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "&quot;Odstránení&quot; používatelia budú mať k serveru ako predtým až do "
-#~ "znovunačítania práv."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Iba odstrániť používateľlov z tabuliek práv."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Povolí spúšťanie uložených procedúr. Nefunguje v tejto verzii MySQL."
-
-#~ msgid "Process list"
-#~ msgstr "Zoznam procesov"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Znovunačítať prístupové práva"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Užívatelia budú mať stále právo USAGE (používanie) až do znovunačítania "
-#~ "práv."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Natívne dáta MS Excel"
-
-#, fuzzy
-#~ msgid "Alter index(s)"
-#~ msgstr "Upraviť stĺpec/stĺpce"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Označiť všetko"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Označiť všetko"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Vložiť"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Aktualizovať dopyt"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Zmazať"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "%1$d riadok/riadkov ovplyvnených."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Jan0"
-
-#~ msgid "Jan1"
-#~ msgstr "Jan1"
-
-#~ msgid "Jan2"
-#~ msgstr "Jan2"
