Translation update done using Pootle.

--- a/po/si.po
+++ b/po/si.po
@@ -4,13 +4,14 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-03-30 23:09+0200\n"
-"Last-Translator: Michal <michal@cihar.com>\n"
+"PO-Revision-Date: 2010-07-22 02:26+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: sinhala <si@li.org>\n"
 "Language: si\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
@@ -2800,10 +2801,9 @@ msgid "Table structure for table"
 msgstr "වගුවක් සඳහා වගු සැකිල්ල"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Content of table __TABLE__"
+msgstr "Content of table @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8358,305 +8358,3 @@ msgstr "වගුව බවට නම වෙනස් කරන්න"
 #~ "Couldn't use either the iconv, libiconv or recode_string functions, "
 #~ "although the necessary extensions appear to be loaded. Check your PHP "
 #~ "configuration."
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "නව ක්ෂේත්‍රයක් එක් කරන්න"
-
-#~ msgid "Field"
-#~ msgstr "ක්ෂේත්‍රය"
-
-#~ msgid "Records"
-#~ msgstr "වාර්තා"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Fields terminated by"
-
-#~ msgid "Fields"
-#~ msgstr "ක්ෂේත්‍ර"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "%s ක්ෂේත්‍රය ඉවත් කරන ලදි"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "See image/jpeg: inline"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"සිප්ගත කරන ලද\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"gzipp ගත කරන ලදි\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"bzipp ගතකරන ලදි\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "හෙඩිමට වෙනත් විස්තර එක් කරන්න (\\n පේළි වි‍භේදනය)"
-
-#, fuzzy
-#~ msgid "and"
-#~ msgstr "සහ"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "අක්‍රිය කරන ලද"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "සක්‍රිය කරන් ලද"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "වගුව ප්‍රතිසංස්කරණය කරන්න"
-
-#~ msgid "Calendar"
-#~ msgstr "දින දර්ශනය"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 compatible"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Could not load default configuration from: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Create an index on&nbsp;%s&nbsp;columns"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "නව පිටුවක් සාදන්න"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "කිසිවක් නැත"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Flush the table (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Invalid server index: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "විස්තරය"
-
-#, fuzzy
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "කිසිවක් නැත"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Schema of the \"%s\" database - Page %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "The \"%s\" table doesn't exist!"
-
-#~ msgid "running on %s"
-#~ msgstr "%s මත ධාවනය වේ"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "The scale factor is too small to fit the schema on one page"
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won't be able to finish this import unless you increase php "
-#~ "time limits."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "කිසිවක් නැත"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "කිසිවක් නැත"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "අභිමත ආදේශක නාමයන් සඳහා සියලු වරප්‍රසාද දෙන්න (භාවිත නාමය_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "The \"%s\" table doesn't exist!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Could not load default configuration from: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr "Invalid hostname for server %1$s. Please review your configuration."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "%1$s සිට %2$s දක්වා වගුවේ නම් වෙනස් කිරීමේ දෝෂයක් ඇත"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "extension. Please check your PHP configuration."
-
-#, fuzzy
-#~ msgid "(or the local MySQL server"
-#~ msgstr "MySQL සර්වරයට ලොග් විය නොහැක"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "below, if there is any, may also help you in diagnosing the problem. If "
-#~ "you still have problems or if the parser fails where the command line "
-#~ "interface succeeds, please reduce your SQL query input to the single "
-#~ "query that causes problems, and submit a bug report with the data chunk "
-#~ "in the CUT section below:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV"
-
-#~ msgid "Copy"
-#~ msgstr "පිටපත් කරන්න"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "භාවිතා කරන්නා ඉවත් කර ඉන්පසු වරප්‍රසාද නැවත අලුත් කරන්න."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr "වඩාත්ම නිවැරදි ක්‍රමයයි. නමුත් වරප්‍රසාද නැවත අලුත් කිරීම සඳහා කාලයක් ගතවේ."
-
-#~ msgid "has been altered."
-#~ msgstr "වෙනස් කරන ලදි."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "මෛ‍ක්‍රොසොෆ්ට් එක්සෙල් 2000"
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "වරප්‍රසාද වගුවෙන් භාවිතා කරන්නන් ඉවත් කරන්න."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-
-#~ msgid "Process list"
-#~ msgstr "ක්‍රියාවලි ලයිස්තුව"
-
-#~ msgid "Reload privileges"
-#~ msgstr "වරප්‍රසාද ප්‍රතිප්‍රවේශනය කරන්න"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Native MS Excel format"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "සියල්ල තෝරන්න"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "සියල්ල තෝරන්න"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "ඇතුල් කරන්න"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Update Query"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "ඉවත් කරන්න"
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "ජනවාරි0"
-
-#~ msgid "Jan1"
-#~ msgstr "ජනවාරි1"
-
-#~ msgid "Jan2"
-#~ msgstr "ජනවාරි2"
